--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0px;
 }
+html{
+    scroll-behavior: smooth;
+}
 .logoImg{
     height:160px;
     padding: 5px;
@@ -48,7 +51,7 @@ nav ul :hover{
     margin-top: 0%;
 }
 #home{
-    color: white;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
 
@@ -60,23 +63,240 @@ nav ul :hover{
 .bgHome{
     background-color: rgba(0, 0, 0, 0.619);
     text-align: center;
-    padding: 10px;
+    padding: 0px;
     margin-top: 90px;
     width: 40%;
+    aspect-ratio: 16/9;
+    transition-delay: 80ms;
     
 }
-#quote{
-    font-size: 3.5rem;
-    font-weight: 200;
-    margin-left: 10%;
-    width: 50%;
-    padding: 10px;
-    font-family: 'Story Script', sans-serif;
-    word-spacing: 0rem;
-    letter-spacing: 0.3rem;
+.bgHome:hover{
+    background-color: rgba(0, 0, 0, 0.736);
 }
-.bgHome2{}
+#quote{
+    font-size: 3rem;
+    font-weight: 200;
+    margin-left: 20%;
+    text-align: center;
+    width: 50%;
+    padding: 15px;
+    font-family: 'Playfair Display', sans-serif;
+    word-spacing: 0rem;
+    letter-spacing: 0rem;
+    margin-bottom: 5%;
+}
 #poem{
-    font-size: 2rem;
+    font-size: 2.8rem;
     padding: 10px;
+    font-family: 'Playfair Display';
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+
+
+.slider-wrapper{
+    position: relative;
+    max-width: 70rem;
+    margin: 0 auto;
+    aspect-ratio: 16/14;
+}
+.slider{
+    opacity: 1;
+    display: flex;
+    aspect-ratio: 4/3.5;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 2.5rem 3 rem -0.75rem hsla(0, 0%, 42%, 0.25);
+}
+.slider img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+}
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 5.25rem;
+    left: 60%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+.slider-nav a{
+    width: 0.75rem;
+    height: 0.75rem;
+    border-radius: 50%;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    background-color: #ffffff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
+}
+.slider-nav a:hover{
+    opacity: 1;
+}
+
+.teamBg{
+    background-image: linear-gradient(180deg, rgb(245, 54, 54), rgb(72, 0, 0));
+}
+
+.slide1r{
+    opacity: 1;
+    display: flex;
+    justify-content: space-around;
+    max-width: 1800px;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 2.5rem 3 rem -0.75rem hsla(0, 0%, 42%, 0.25);
+}
+
+
+
+
+.slider {
+  display: flex;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+  width: 120%;
+  height: 90vh;
+  margin-top: 0;
+  margin-left: 0px;
+}
+
+.slide {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 100%;
+  scroll-snap-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.player-details, .player-stats {
+  width: 25%;
+  font-family: 'Playfair Display', sans-serif;
+}
+.player-stats{
+    margin-right: 900px;
+}
+.player-details h2, .player-stats h3 {
+  margin-bottom: 10px;
+  font-size: 5.2rem;
+  color: white;
+}
+.player-details p{
+    margin-top: 10px;
+    font-size: 1.5rem;
+    color: yellow;
+}
+.player-stats p{
+    font-size: 1.5rem;
+     color: yellow;
+}
+.player-img {
+  width: 60%;
+  aspect-ratio: 4/3.5;
+  text-align: center;
+}
+
+.player-img img {
+  max-height: 100vh;
+  object-fit: contain;
+}
+
+
+
+footer{
+    background-color: #111;
+}
+.footerContainer{
+    width: 90%;
+    padding: 70px 30px 20px;
+}
+.socialIcons{
+    display: flex;
+    justify-content: center;
+}
+.socialIcons a{
+    text-decoration: none;
+    padding: 10px;
+    background-color: white;
+    margin: 10px;
+    border-radius: 50%;
+}
+.socialIcons a i{
+    font-size: 2em;
+    color: black;
+    opacity: 0.9;
+}
+.socialIcons a:hover{
+    background-color: #111;
+    transition: 0.5s;
+}
+.socialIcons a:hover i{
+    background-color: white;
+    transition: 0.5s;
+}
+.footerNav{
+    margin: 30px 0;
+}
+.footerNav ul{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+}
+.footerNav ul li a{
+   color: white;
+   margin: 20px;
+   text-decoration: none;
+   font-size: 1.3em;
+   opacity: 0.7s;
+   transition: 0.5s;
+}
+.footer ul li a:hover{
+    opacity: 1;
+}
+.footerBottom{
+    background-color: #000;
+    padding: 20px;
+    text-align: center;
+}
+.footerBottom p{
+    color: white;
+}
+.designer{
+    opacity: 0.9;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    margin: 0px 5px;
+}
+@media (max-width: 1210px){
+    .portfolioSection{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .portfolio1{
+        width: 90%;
+        margin: 10px 0;
+    }
+    .about{
+        flex-direction: column;
+        align-items: center;
+    }
+    .imageAbout{
+        width: 380px;
+        aspect-ratio: 7/9;
+    }
+    .bgAbout{
+        
+        margin-left: 15%;
+        margin-right: 15%;
+    }
 }
