--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 html{
     scroll-behavior: smooth;
+    background-image: linear-gradient(180deg, rgb(245, 54, 54), rgb(72, 0, 0));
 }
 .logoImg{
     height:160px;
@@ -161,7 +162,7 @@ nav ul :hover{
   display: flex;
   overflow: hidden;
   scroll-snap-type: x mandatory;
-  width: 120%;
+  width: 100%;
   height: 90vh;
   margin-top: 0;
   margin-left: 0px;
@@ -171,7 +172,7 @@ nav ul :hover{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 110%;
   scroll-snap-align: center;
   padding: 10px;
   box-sizing: border-box;
@@ -275,4 +276,11 @@ footer{
     letter-spacing: 1px;
     font-weight: 400;
     margin: 0px 5px;
+}
+
+@media (max-width:1191px){
+    .right{
+        flex-direction: column;
+        font-size: 1.5rem;
+    }
 }
