--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ html{
     scroll-behavior: smooth;
     background-image: linear-gradient(180deg, rgb(245, 54, 54), rgb(72, 0, 0));
 }
-.logoImg{
+html, body {
+    overflow-x: hidden;
+}
+
+#logoImg{
     height:160px;
     padding: 5px;
     margin-left: 100px;
@@ -16,8 +20,9 @@ nav{
     display: flex;
     justify-content: space-between;
     background-image: linear-gradient(180deg, rgb(244, 43, 43), rgb(114, 0, 0));
-    height: 170px;
+    height: 25%;
     width: 100%;
+    gap: 50px;
 }
 nav a{
     text-decoration: none;
@@ -47,8 +52,8 @@ nav ul :hover{
     background-size: cover;
     background-repeat: no-repeat;
     max-width: 100%;
-    height:1180px;
-    aspect-ratio: 10/4;
+    height:auto;
+    
     margin-top: 0%;
 }
 #home{
@@ -170,9 +175,10 @@ nav ul :hover{
 
 .slide {
   display: flex;
+  gap: 5%;
   justify-content: space-between;
   align-items: center;
-  width: 110%;
+  width: 100%;
   scroll-snap-align: center;
   padding: 10px;
   box-sizing: border-box;
@@ -187,7 +193,7 @@ nav ul :hover{
 }
 .player-details h2, .player-stats h3 {
   margin-bottom: 10px;
-  font-size: 5.2rem;
+  font-size: 4rem;
   color: white;
 }
 .player-details p{
@@ -278,9 +284,32 @@ footer{
     margin: 0px 5px;
 }
 
-@media (max-width:1191px){
-    .right{
+@media (max-width:751px){
+   nav{
         flex-direction: column;
-        font-size: 1.5rem;
+        justify-content: center;
+        align-items: center;
+        gap: 0px;
+    }
+    nav ul{
+        font-size: 1rem;
+        gap: 30px;
+    }
+    .slider{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .slider-nav{
+        left: 50%;
+    }
+    #quote{
+        font-size: 1rem;
+    }
+    #poem{
+    font-size: 1rem;
+    }
+    .right{
+        font-size: 1rem;
     }
 }
