--- a/style.css
+++ b/style.css
@@ -100,7 +100,10 @@ nav ul :hover{
     margin-bottom: 5%;
 }
 
-
+.container{
+    width: 100%;
+    height: auto;
+}
 
 .slider-wrapper{
     position: relative;
@@ -149,7 +152,7 @@ nav ul :hover{
     background-image: linear-gradient(180deg, rgb(245, 54, 54), rgb(72, 0, 0));
 }
 
-.slide1r{
+.slider{
     opacity: 1;
     display: flex;
     justify-content: space-around;
@@ -175,7 +178,7 @@ nav ul :hover{
 
 .slide {
   display: flex;
-  gap: 5%;
+  gap: 0%;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -321,5 +324,14 @@ footer{
         width: 100%;
         text-align: center;
         margin: 10px;
+    }
+    .slider{
+        max-width: 550px;
+    }
+    .container{
+       max-width: 100% ;
+       display: flex;
+       align-items: center;
+       justify-content: center;
     }
 }
